# Symphony

./: CMakeLists.txt  run.ps1
include/common/: ansi.hpp  diagnostic.hpp  span.h  span.hpp
include/lexer/: lexer.hpp  token.hpp
src/: main.cpp
src/common/: ansi.cpp  diagnostic.cpp  span.cpp
src/lexer/: lexer.cpp  token.cpp
tests/: common.cpp  example.cpp  tests.cpp
